syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank{}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

message UpdateCategoryRequest {
    string id = 1;
    string name = 2;
    string description = 3;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc ListCategories(blank) returns (CategoryList) {}
    rpc GetCategory(CategoryGetRequest) returns (Category) {}
    rpc UpdateCategory(UpdateCategoryRequest) returns (Category) {}
}
